# openrag-langflow-app

./: .env.example  .gitignore  BONES_RIGS_EMOTIONS_CLEANUP_PLAN.md  DEAD_CODE_CLEANUP_PLAN.md  MIGRATION_SUMMARY.md  PLAN_MONSTER_TEAM_PLAY_FIX.md  README.md  WEAPON_ANIMATION_CLEANUP_PLAN.md  main.py  pyproject.toml  utils.py
characters/default_heroes/: heroes.json
characters/default_monsters/: monsters.json
openrag-ibmcloud-deploy/: README.md  REFERENCE.md  SETUP.md  setup-vm.sh
python/: README.md  config.py  main.py  pyproject.toml  utils.py
python/openrag_utils/: README.md  __init__.py  chat.py  documents.py  knowledge_filters.py  search.py  settings.py
python/tests/: README.md  __init__.py  test_all_utils.py  test_integration.py
typescript/: .dockerignore  .gitignore  COMMIT_MESSAGE.md  DOCKER.md  Dockerfile  README.md  SECURITY.md  TEST_DISCUSSION.md  TEST_PLAN_RACE_SEX.md  deploy-to-code-engine.sh  docker-compose.yml  jest.config.js  next.config.ts  package-lock.json  package.json
typescript/app/: globals.css  layout.tsx  page.tsx
typescript/app/battle-arena/: BattleArena.tsx  EVERART_SETUP.md  FINAL_STRUCTURE.md  README.md  README_MONSTER_CREATION.md  REORGANIZATION_DIAGRAM.md  REORGANIZATION_PLAN.md  REORGANIZATION_SUMMARY.md  STRUCTURE_COMPARISON.md  constants.ts  page.tsx  types.ts
typescript/app/chat/: Chat.tsx  README.md
typescript/app/components/: BattleArena.tsx  Chat.tsx  DnDBattle.tsx  PortalButton.tsx
typescript/app/dnd/: EVERART_SETUP.md  constants.ts  (+3 more)
typescript/docs/: ARCHITECTURE_REFACTOR_PLAN.md  BATTLE_ARENA_REFACTORING.md  CHARACTER_SOURCE_BADGES.md  CHARACTER_SOURCE_BADGES_IMPLEMENTATION.md  CODEBASE_AUDIT.md  COMPONENT_MIGRATION_SUMMARY.md  COMPONENT_STRUCTURE_ANALYSIS.md  DEFAULT_DATA_JSON.md  ELIMINATE_FALLBACK_REFACTOR.md  MIGRATION_PHASES.md  MIGRATION_TYPESCRIPT.md  README.md  REFACTORING_SUMMARY.md  card-image-enhancement.md
typescript/scripts/: crop-decals.ts  generate-placeholder.ts  generate-skipped-placeholder.ts  process-decals.ts  start-with-port.js
(+371 files in other folders)
